--- a/header-navigation.html
+++ b/header-navigation.html
@@ -22,7 +22,7 @@
 
       </div>
     </div>
-    <div id="remove-effect" class="bbb d-none">
+    <!-- <div id="remove-effect" class="bbb d-none">
     	<div class="searching d-table position-fixed h-100 w-100">
 	    	<div class="d-table-cell align-middle">
 	    		<div class="container">
@@ -34,6 +34,16 @@
 	    		</div>
 	    	</div>
 	    </div>
+    </div> -->
+    <div id="remove-effect" class="bbb d-none">
+      <div id="sp-remove" class="bg-color position-fixed h-100 w-100"></div>
+      <div class="container input-float position-fixed">
+        <form role="search">
+          <div class="form-group">
+            <input type="search" class="form-control border-primary text-white" id="exampleFormControlInput1" placeholder="Type to search">
+          </div>
+        </form>
+      </div>
     </div>
     <div id='nav-parent' class="container">
       <div id="nav-top" class="row py-1 py-md-2 border-bottom border-secondary justify-content-md-start d-none d-md-flex">
@@ -82,7 +92,7 @@
     </div>
   </div>
   <script src="menu-right.js"></script>
-  <script src="scroll-navigation.js"></script>
   <script src="search-navigation.js"></script>
+  <script src="scroll-navigation.js"></script>
 </body>
 </html>
