--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="./navigation-st.css">
+	<link rel="stylesheet" type="text/css" href="./style.css">
 	<script src="https://kit.fontawesome.com/a58ac99150.js"></script>
 
 </head>
 <body>
-<div id="scroll-bg" class="fixed-top bg-transparent">
-	<div id="menu-right" class="alert alert-secondary alert-dismissible fade show p-0 d-none" role="alert">
+  <!-- header navigation -->
+  <div id="scroll-bg" class="fixed-top bg-transparent">
+    <div id="menu-right" class="alert alert-secondary alert-dismissible fade show p-0 d-none" role="alert">
       <div class="d-flex justify-content-center px-4 py-2">
         <i id="del-right" class="fas fa-times fa-2x"></i>
       </div>
@@ -49,13 +50,13 @@
           <a href="#" class="text-light p-2 nav-link"><i class="fas fa-phone fa-xs"></i> +012-3456-789 </a>
           <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-light p-2" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="fas fa-globe-americas fa-xs"></i> language
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">English</a>
-                  <a class="dropdown-item" href="#">Vietnamese</a>
-                  <a class="dropdown-item" href="#">France</a>
-                </div>
+              <i class="fas fa-globe-americas fa-xs"></i> language
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">English</a>
+              <a class="dropdown-item" href="#">Vietnamese</a>
+              <a class="dropdown-item" href="#">France</a>
+            </div>
           </div>
         </nav>
       </div>
@@ -63,7 +64,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark py-1 py-md-2">
         <a class="navbar-brand" href="#"><img src="http://bootstrapdevelop.com/tf/finnoplus/images/logo.png" class="100h 100w"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <div class="navbar-nav">
@@ -83,6 +84,22 @@
     </div>
   </div>
 
+  <!-- Header image -->
+  <div class="d-table header vh-100 w-100 bg-img">
+    <div class="d-table-cell align-middle w-100">
+      <div class="container text-white d-flex flex-column justify-content-end">
+        <div class="row">
+          <div class="h2 col-10">We Are Experience</div>
+          <div class="font-weight-bold mb-2 col-12 h1">Consulting Work</div>
+          <div class="font-weight-normal col-12 col-lg-6 mb-4" style="letter-spacing: 1px; line-height: 1.5rem;">Business Consulting offers a wide range of servises to businesses either before durning tought financial times.</div>
+          <div class="mt-3 col-12 row pr-0 m-auto">
+            <a class="btn btn-primary px-md-5 py-3 px-4 rounded-pill mr-lg-3 mr-sm-1" href="#" role="button">Our Service</a>
+            <a class="btn btn-outline-primary px-md-5 px-4 py-3 rounded-pill ml-2 text-white" href="#" role="button">Contact Us</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
