Upgrade All component for HTML

--- a/index.html
+++ b/index.html
@@ -101,6 +101,40 @@
     </div>
   </div>
 
+  <!-- Main begin service -->
+  <div class="mt-lg-n5 mt-sm-3 mt-5">
+    <div class="container text-white">
+      <div class="row position-relative no-gutters">
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4 card rounded-0 overlay mb-sm-3 mb-3" style="background-image: url(http://bootstrapdevelop.com/tf/finnoplus/images/Financial-bg.jpg); background-size: cover;" data-toggle="collapse">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/Financial.png" class="card-img-top ml-4 mt-4 w-15"alt="Error">
+          <div class="card-body p-lg-4 pr-md-0">
+            <h6 class="card-subtitle mb-2">Card subtitle</h6>
+            <h3 class="card-title font-weight-bold">Financial</h3>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card col-12 col-sm-12 col-md-4 col-lg-4 rounded-0 overlay mb-sm-3 mb-3" data-toggle="collapse" style="width: 18rem; background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Cosmos_bipinnatus_pink%2C_Burdwan%2C_West_Bengal%2C_India_10_01_2013.jpg/1200px-Cosmos_bipinnatus_pink%2C_Burdwan%2C_West_Bengal%2C_India_10_01_2013.jpg); background-size: cover;">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/Inventory.png" class="card-img-top w-15 ml-4 mt-4" alt="Error">
+          <div class="card-body p-lg-4 pr-md-0">
+            <h6 class="card-subtitle mb-2">Card subtitle</h6>
+            <h3 class="card-title font-weight-bold">Inventory</h3>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card col-12 col-sm-12 col-md-4 col-lg-4 rounded-0 overlay mb-sm-3" data-toggle="collapse" style="width: 18rem; background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Cosmos_bipinnatus_pink%2C_Burdwan%2C_West_Bengal%2C_India_10_01_2013.jpg/1200px-Cosmos_bipinnatus_pink%2C_Burdwan%2C_West_Bengal%2C_India_10_01_2013.jpg); background-size: cover;">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/Individuals.png" class="card-img-top w-15 ml-4 mt-4" alt="Error">
+          <div class="card-body p-lg-4 pr-md-0">
+            <h6 class="card-subtitle mb-2">Card subtitle</h6>
+            <h3 class="card-title font-weight-bold">Individuals</h3>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
