Upgrade all component for HTML

--- a/index.html
+++ b/index.html
@@ -135,7 +135,77 @@
       </div>
     </div>
   </div>
-
+  <div class="p-100-70">
+    <div class="container">
+      <div class="position-relative text-center mb-5">
+        <h5>Our Services</h5>
+        <h2 class="font-weight-bold mb-3 display-4">What We Do</h2>
+        <div class="customize m-auto position-relative"></div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-4 mb-3">
+          <div class="card">
+            <img src="http://bootstrapdevelop.com/tf/finnoplus/images/service/01.jpg" class="card-img-top" alt="Error">
+            <div class="card-body px-0">
+              <h5 class="card-title font-weight-bolder mb-2">Business Loan</h5>
+              <p class="card-text text-muted">Provide Business Finacial Support</p>
+              <a href="#" class="text-primary text-decoration-none">Read more   <i class="fas fa-arrow-right"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-4 mb-3">
+          <div class="card">
+            <img src="http://bootstrapdevelop.com/tf/finnoplus/images/service/02.jpg" class="card-img-top" alt="Error">
+            <div class="card-body px-0">
+              <h5 class="card-title font-weight-bolder mb-2">Insurance Consulting</h5>
+              <p class="card-text text-muted">Provide Business Finacial Support</p>
+              <a href="#" class="text-primary text-decoration-none">Read more   <i class="fas fa-arrow-right"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-4 mb-3">
+          <div class="card">
+            <img src="http://bootstrapdevelop.com/tf/finnoplus/images/service/03.jpg" class="card-img-top" alt="Error">
+            <div class="card-body px-0">
+              <h5 class="card-title font-weight-bolder mb-2">Mutual Funds</h5>
+              <p class="card-text text-muted">Provide Business Finacial Support</p>
+              <a href="#" class="text-primary text-decoration-none">Read more   <i class="fas fa-arrow-right"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-4 mb-3">
+          <div class="card">
+            <img src="http://bootstrapdevelop.com/tf/finnoplus/images/service/04.jpg" class="card-img-top" alt="Error">
+            <div class="card-body px-0">
+              <h5 class="card-title font-weight-bolder mb-2">Business Loan</h5>
+              <p class="card-text text-muted">Provide Business Finacial Support</p>
+              <a href="#" class="text-primary text-decoration-none">Read more   <i class="fas fa-arrow-right"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-4 mb-3">
+          <div class="card">
+            <img src="http://bootstrapdevelop.com/tf/finnoplus/images/service/05.jpg" class="card-img-top" alt="Error">
+            <div class="card-body px-0">
+              <h5 class="card-title font-weight-bolder mb-2">Insurance Consulting</h5>
+              <p class="card-text text-muted">Provide Business Finacial Support</p>
+              <a href="#" class="text-primary text-decoration-none">Read more   <i class="fas fa-arrow-right"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-4 mb-3">
+          <div class="card">
+            <img src="http://bootstrapdevelop.com/tf/finnoplus/images/service/06.jpg" class="card-img-top" alt="Error">
+            <div class="card-body px-0">
+              <h5 class="card-title font-weight-bolder mb-2">Mutual Funds</h5>
+              <p class="card-text text-muted">Provide Business Finacial Support</p>
+              <a href="#" class="text-primary text-decoration-none">Read more   <i class="fas fa-arrow-right"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
