--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
       </div>
     </div>
   </div>
-  <div class="p-100-70">
+
+  <!-- main our service -->
+  <div class="p-100-70" style="padding-bottom: 0px!important">
     <div class="container">
       <div class="position-relative text-center mb-5">
         <h5>Our Services</h5>
@@ -207,7 +209,103 @@
     </div>
   </div>
 
+  <!-- main our company -->
+  <div class="container-fuild p-100-70" style="padding-bottom: 0px!important">
+    <div class="card mb-3">
+      <div class="row no-gutters">
+        <div class="col-12 col-md-12 col-lg-6">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/img_01.jpg" class="card-img">
+        </div>
+        <div class="col-12 col-md-12 col-lg-6 bg-light d-flex flex-column justify-content-center pl-md-5 py-lg-0 py-md-5 pl-sm-2 pl-3 py-4">
+          <div class="block-width">
+            <div class="card-title h3 font-weight-bolder mb-4">
+              <span class="text-primary">Become</span> a Partner of <br/> Our Company
+            </div>
+            <h6 class="card-text text-sm-left text-muted mb-4 font-weight-normal">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
+            </h6>
+            <p class="card-text text-sm-left text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <a href="#" role="button" class="btn btn-primary btn-lg rounded-pill" style="width: 11rem!important; font-size: 16px;">Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container p-100-70" style="padding-bottom: 0px!important">
+    <div class="card">
+      <div class="row no-gutters">
+        <div class="col-md-12 col-lg-6">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/video_img.jpg" class="card-img">
+        </div>
+        <div class="col-md-12 col-lg-6">
+          <div class="card-body jumbotron py-xl-4 pl-xl-5 py-lg-0 pr-md-0 mb-0 h-100">
+            <h3 class="text-dark h2 font-weight-bold py-2 mb-4">We Provide The Solutions To Grow Your Business</h3>
+            <p class="card-text text-muted mb-4">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim Ut enim ad minim veniam, consectetur quis nostrud exercitation. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+            <a href="#" role="button" class="btn btn-primary btn-lg rounded-pill" style="width: 11rem!important; font-size: 16px;">Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <!-- main our team -->
+  <div class="p-100-70" style="padding-bottom: 0px!important">
+    <div class="container">
+      <div class="position-relative text-center mb-5">
+        <h5>Our Team</h5>
+        <h2 class="display-4 font-weight-bold mb-3">Best Team</h2>
+        <div class="customize m-auto position-relative"></div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-sm-3">
+          <div class="card shadow mb-5 rounded">
+            <img src="http://bootstrapdevelop.com/tf/finnoplus/images/team/01.jpg" class="card-img-top" alt="Error">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="h4 font-weight-bold text-center">Denise Brewer</h5>
+                <h6 class="card-subtitle mb-2 text-muted text-center"><small>Company Director</small></h6>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-sm-3">
+          <div class="card shadow mb-5 rounded">
+            <img src="http://bootstrapdevelop.com/tf/finnoplus/images/team/02.jpg" class="card-img-top" alt="Error">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="h4 font-weight-bold text-center">Denise Brewer</h5>
+                <h6 class="card-subtitle mb-2 text-muted text-center"><small>Senior Sales Manager</small></h6>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-sm-3">
+          <div class="card shadow mb-5 rounded">
+            <img src="http://bootstrapdevelop.com/tf/finnoplus/images/team/03.jpg" class="card-img-top" alt="Error">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="h4 font-weight-bold text-center">Denise Brewer</h5>
+                <h6 class="card-subtitle mb-2 text-muted text-center"><small>Senior Company Director</small></h6>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-sm-3">
+          <div class="card shadow mb-5 rounded">
+            <img src="http://bootstrapdevelop.com/tf/finnoplus/images/team/04.jpg" class="card-img-top" alt="Error">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="h4 font-weight-bold text-center">Denise Brewer</h5>
+                <h6 class="card-subtitle mb-2 text-muted text-center"><small>Project Manager</small></h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
