update component carousel for file HTML

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
 	<title>Finnoplus</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />	
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="./style.css">
-	<script src="https://kit.fontawesome.com/a58ac99150.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="./owl/docs/assets/owlcarousel/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="./owl/docs/assets/owlcarousel/assets/owl.theme.default.min.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="./style.css">
+  <script src="https://kit.fontawesome.com/a58ac99150.js"></script>
+  <script src="./owl/docs/assets/vendors/jquery.min.js"></script>
+  <script src="./owl/docs/assets/owlcarousel/owl.carousel.js"></script>
 
 </head>
 <body>
@@ -307,6 +311,79 @@
     </div>
   </div>
 
+  <!-- Carousel -->
+  <div class="container-fuild" style="background-image: url(http://bootstrapdevelop.com/tf/finnoplus/images/hiro/img_04.jpg);">
+    <div class="overlay-carousel">
+      <div class="container py-5">
+        <div class="owl-carousel owl-theme m-auto">
+          <div class="item">
+            <div class="position-relative bg-primary d-flex justify-content-center align-items-center text-white item-icon">
+              <i class="fas fa-quote-left fa-lg"></i>
+            </div>
+            <div class="bg-bluer text-white">       
+              <p class="p-5 font-italic">   
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.
+              </p>
+            </div>
+            <div class="pseu"></div>
+            <div class="d-flex align-items-center">
+              <img src="http://bootstrapdevelop.com/tf/finnoplus/images/user-02.jpg" class="rounded-circle border-0 w-15">
+              <div class="text-white p-3">
+                <h4 class="font-weight-normal m-0">Sarah Arevik</h4>
+                <h5 class="font-weight-normal">Chief Executive</h5>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="position-relative bg-primary d-flex justify-content-center align-items-center text-white item-icon">
+              <i class="fas fa-quote-left fa-lg"></i>
+            </div>
+            <div class="bg-bluer text-white">       
+              <p class="p-5 font-italic">   
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.
+              </p>
+            </div>
+            <div class="pseu"></div>
+            <div class="d-flex align-items-center">
+              <img src="http://bootstrapdevelop.com/tf/finnoplus/images/user-02.jpg" class="rounded-circle border-0 w-15">
+              <div class="text-white p-3">
+                <h4 class="font-weight-normal m-0">Sarah Arevik</h4>
+                <h5 class="font-weight-normal">Chief Executive</h5>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="position-relative bg-primary d-flex justify-content-center align-items-center text-white item-icon">
+              <i class="fas fa-quote-left fa-lg"></i>
+            </div>
+            <div class="bg-bluer text-white">       
+              <p class="p-5 font-italic">   
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.
+              </p>
+            </div>
+            <div class="pseu"></div>
+            <div class="d-flex align-items-center">
+              <img src="http://bootstrapdevelop.com/tf/finnoplus/images/user-02.jpg" class="rounded-circle border-0 w-15">
+              <div class="text-white p-3">
+                <h4 class="font-weight-normal m-0">Sarah Arevik</h4>
+                <h5 class="font-weight-normal">Chief Executive</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Main our latest new  -->
   <div class="p-100-70" style="padding-bottom: 0px!important">
     <div class="container">
@@ -355,6 +432,10 @@
 
 
 
+
   <script src="effect.js"></script>
+  <script src="./owl/docs/assets/vendors/highlight.js"></script>
+  <script src="./owl/docs/assets/js/app.js"></script>
+  <script src='./main-carousel.js'></script>
 </body>
 </html>
