Update component new for file HTML

--- a/index.html
+++ b/index.html
@@ -472,6 +472,49 @@
     </div>
   </div>
 
+  <!-- Main several logo -->
+  <div class="p-100-70" style="padding-bottom: 0px!important">
+    <div class="container">
+      <div class="row">
+        <div class="col-6 col-sm-4 col-md-2 col-lg-2 center">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/cl_01.jpg" class="img-fluid">
+        </div>
+        <div class="col-6 col-sm-4 col-md-2 col-lg-2 center">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/cl_02.jpg" class="img-fluid">
+        </div>
+        <div class="col-6 col-sm-4 col-md-2 col-lg-2 center">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/cl_03.jpg" class="img-fluid">
+        </div>
+        <div class="col-6 col-sm-4 col-md-2 col-lg-2 center">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/cl_01.jpg" class="img-fluid">
+        </div>
+        <div class="col-6 col-sm-4 col-md-2 col-lg-2 center">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/cl_04.jpg" class="img-fluid">
+        </div>
+        <div class="col-6 col-sm-4 col-md-2 col-lg-2 center">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/cl_02.jpg" class="img-fluid">
+        </div>
+        <div class="col-6 col-sm-4 col-md-2 col-lg-2 center">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/cl_01.jpg" class="img-fluid">
+        </div>
+        <div class="col-6 col-sm-4 col-md-2 col-lg-2 center">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/cl_06.jpg" class="img-fluid">
+        </div>
+        <div class="col-6 col-sm-4 col-md-2 col-lg-2 center">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/cl_07.jpg" class="img-fluid">
+        </div>
+        <div class="col-6 col-sm-4 col-md-2 col-lg-2 center">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/cl_02.jpg" class="img-fluid">
+        </div>
+        <div class="col-6 col-sm-4 col-md-2 col-lg-2 center">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/cl_09.jpg" class="img-fluid">
+        </div>
+        <div class="col-6 col-sm-4 col-md-2 col-lg-2 center">
+          <img src="http://bootstrapdevelop.com/tf/finnoplus/images/cl_10.jpg" class="img-fluid">
+        </div>
+      </div>
+    </div>
+  </div>
 
 
   <script src="effect.js"></script>
