update component new for file HTML

--- a/index.html
+++ b/index.html
@@ -516,7 +516,159 @@
     </div>
   </div>
 
-
+  <!-- Main our info -->
+  <div class="mb-lg-n5 mb-3">
+    <div class="container" style="background-color: #00206E;">
+      <div class="row px-lg-2">
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-md-0">
+          <div class="d-flex flex-md-column flex-lg-row align-items-center text-md-center text-lg-left justify-content-md-center py-3">
+            <div class="d-flex align-items-center justify-content-center text-white" style="height: 55px; width: 55px; text-align: center; background-color: #0A1B47; border-radius: 50%;">
+              <i class="fas fa-home fa-2x"></i>
+            </div>
+            <div class="text-white pt-3 pl-3">
+              <h3 class="h5 font-weight-bolder">Head Office</h3>
+              <p style="font-size: 14px;">124, 1010 Avenue, NY 90001, USA</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-md-0">
+          <div class="d-flex flex-md-column flex-lg-row align-items-center text-md-center text-lg-left justify-content-md-center py-3">
+            <div class="d-flex align-items-center justify-content-center text-white" style="height: 55px; width: 55px; text-align: center; background-color: #0A1B47; border-radius: 50%;">
+              <i class="fas fa-phone fa-2x"></i>
+            </div>
+            <div class="text-white pt-3 pl-3">
+              <h3 class="h5 font-weight-bolder">Call Us</h3>
+              <p style="font-size: 14px;">(+91) 987-654-3210</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4 px-md-0">
+          <div class="d-flex flex-md-column flex-lg-row text-md-center text-lg-left align-items-center justify-content-md-center py-3">
+            <div class="d-flex align-items-center justify-content-center text-white" style="height: 55px; width: 55px; text-align: center; background-color: #0A1B47; border-radius: 50%;">
+              <i class="fas fa-envelope fa-2x"></i>
+            </div>
+            <div class="text-white pt-3 pl-3">
+              <h3 class="h5 font-weight-bolder">Mail Us</h3>
+              <p style="font-size: 14px;">nguyentrongnhanc8@gmail.com</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid footer px-0 position-relative">
+    <div style="background-color: rgba(36, 43, 60, .8);">
+      <div class="container p-100-70" style="padding-bottom: 0px!important">
+        <div class="row text-white">
+          <div class="col-12 col-sm-12 col-md-3 col-lg-3 mb-4">
+            <img src="http://bootstrapdevelop.com/tf/finnoplus/images/logo.png" class="100h 100w mb-4">
+            <div class="footer-img">
+              <address class="mb-2">
+                <i class="fas fa-map-marker-alt h-100"></i>
+                <span class="pl-2">PO Box 16122 Collins Street 
+                            West Victoria 8007 Australia</span>
+              </address>
+              <div class="mb-2">
+                <i class="fas fa-phone fa-lg"></i>
+                <span class="pl-2">Phone: <a href="#" class="text-decoration-none text-light">(888) 123-4567</a></span>
+              </div>
+              <div class="mb-2">
+                <i class="fas fa-envelope fa-lg"></i>
+                <span class="pl-2">Email: <a href="#" class="text-decoration-none text-light">info@example.com</a></span>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-3 col-lg-3 mb-4">
+            <h4 class="font-weight-bolder mb-3">Recent Post</h4>
+            <div class="footer-text">
+              <div class="mb-2">
+                <i class="fas fa-caret-right fa-sm"></i>
+                <span>Common mistakes when managing finances</span>
+                <div class="pl-2">
+                  <i class="fas fa-clock"></i>
+                  <small class="text-secondary">November 25, 2017</small>
+                </div>
+              </div>
+              <div class="mb-2">
+                <i class="fas fa-caret-right fa-sm"></i>
+                <span>Financial Services – Five Ways to Start</span>
+                <div class="pl-2">
+                  <i class="fas fa-clock"></i>
+                  <small class="text-secondary">November 25, 2017</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-3 col-lg-3 mb-4">
+            <h4 class="font-weight-bolder mb-3">Our Services</h4>
+            <div class="footer-text">
+              <a href="#" class="text-light text-decoration-none d-block mb-2">
+                <i class="fas fa-caret-right fa-sm"></i> 
+                <span>Healthcare Services</span>
+              </a>
+              <a href="#" class="text-light text-decoration-none d-block mb-2">
+                <i class="fas fa-caret-right fa-sm"></i> 
+                <span>Quality Resourcing</span>
+              </a>
+              <a href="#" class="text-light text-decoration-none d-block mb-2">
+                <i class="fas fa-caret-right fa-sm"></i> 
+                <span>Financial Planning</span>
+              </a>
+              <a href="#" class="text-light text-decoration-none d-block mb-2">
+                <i class="fas fa-caret-right fa-sm"></i> 
+                <span>Software & Research</span>
+              </a>
+              <a href="#" class="text-light text-decoration-none d-block mb-2">
+                <i class="fas fa-caret-right fa-sm"></i> 
+                <span>Travel and Aviation</span>
+              </a>
+              <a href="#" class="text-light text-decoration-none d-block mb-2">
+                <i class="fas fa-caret-right fa-sm"></i> 
+                <span>Business Services</span>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-3 col-lg-3">
+            <form>
+              <div class="row">
+                <div class="col-md-12">
+                  <h4 class="font-weight-bolder mb-3">Newsletter</h4>
+                </div>
+                <div class="col-md-12">
+                  <input class="bg-dark text-light form-control form-control-md mb-3 rounded-pill border-0" type="text" placeholder="Name">
+                </div>
+                <div class="col-md-12">
+                  <input class="bg-dark form-control text-light form-control-md mb-3 rounded-pill border-0" type="text" placeholder="Email">
+                </div>
+                <div class="col-md-12">
+                  <a href="#" role="button" class="btn btn-primary py-2 px-5 rounded-pill">Submit</a>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="mt-4">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 pr-md-0">
+              <p class="text-light d-flex justify-content-md-start justify-content-center">Copyright 2019 Finnoplus. All Rights Reserved</p>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+              <div class="d-flex justify-content-md-end justify-content-center">
+                <a href="#" class="text-light px-2"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="text-light px-2"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="text-light px-2"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-light px-2"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#" class="text-light px-2"><i class="fab fa-pinterest"></i></a>
+                <a href="#" class="text-light px-2"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="effect.js"></script>
   <script src="./owl/docs/assets/vendors/highlight.js"></script>
   <script src="./owl/docs/assets/js/app.js"></script>
